--- a/index.html
+++ b/index.html
@@ -18,16 +18,40 @@
   </head>
   
   <body>
-    <h1>K-means algorithm in D3.js</h1>
-    <div class="inputForm">
-        <label>1</label>
-        <input type="range" id="number" value="100" min="1" max="1000">
-        <label>1000</label>
-        <button id="go" type="submit" value="submit"></button>
-    </div>
-
-
     <div class="bodyContainer">
+      <h1>Movie's | Connections</h1>
+      <div class="inputForm">
+          <label>1</label>
+          <input type="range" id="number" value="100" min="1" max="1000">
+          <label>1000</label>
+          <button id="go" type="submit" value="submit"></button>
+      </div>
+      <div id="kmeans" class="kmeans-chart"></div>
+      <div class="output">
+        <textarea readonly id="output"></textarea>
+      </div>
+    </div>
+    <div class="bodyContainer">
+      <h1>Movie's | ForceDirected</h1>
+      <div class="inputForm">
+          <label>1</label>
+          <input type="range" id="number" value="100" min="1" max="1000">
+          <label>1000</label>
+          <button id="go" type="submit" value="submit"></button>
+      </div>
+      <div id="kmeans" class="kmeans-chart"></div>
+      <div class="output">
+        <textarea readonly id="output"></textarea>
+      </div>
+    </div>
+    <div class="bodyContainer">
+      <h1>Movie's | KMeans</h1>
+      <div class="inputForm">
+          <label>1</label>
+          <input type="range" id="number" value="100" min="1" max="1000">
+          <label>1000</label>
+          <button id="go" type="submit" value="submit"></button>
+      </div>
       <div id="kmeans" class="kmeans-chart"></div>
       <div class="output">
         <textarea readonly id="output"></textarea>
@@ -38,7 +62,7 @@
     
   </body>
   
-  <script type="text/javascript">kMeans("#kmeans", 500, 500, "number", 21, 10);</script>
+  <script type="text/javascript">kMeans("#kmeans", 475, 475, "number", 0, 0);</script>
                             <!-- kMeans(elt, w, h, numPoints, numClusters, maxIter) { -->
                               <!-- numPoints => 1000 Movies -->
                               <!-- numClusters => 21 Genres -->
