--- a/index.html
+++ b/index.html
@@ -18,43 +18,42 @@
   </head>
   
   <body>
+    <!-- Graph Movie Data -->
     <div class="bodyContainer">
       <h1>Movie's | Connections</h1>
       <div class="inputForm">
-          <label>1</label>
-          <input type="range" id="number" value="100" min="1" max="1000">
-          <label>1000</label>
-          <button id="go" type="submit" value="submit"></button>
+          <label>1</label><input type="range" id="graphNumber" value="100" min="1" max="1000"><label>1000</label>
+          <button id="graphMoviesButton" type="submit" value="submit"></button>
       </div>
-      <div id="kmeans" class="kmeans-chart"></div>
+      <div id="movieGraph" class="kmeans-chart"></div>
       <div class="output">
-        <textarea readonly id="output"></textarea>
+        <textarea readonly id="graphMoviesOutput"></textarea>
       </div>
     </div>
+
+    <!-- Force Directed Graph -->
     <div class="bodyContainer">
       <h1>Movie's | ForceDirected</h1>
       <div class="inputForm">
-          <label>1</label>
-          <input type="range" id="number" value="100" min="1" max="1000">
-          <label>1000</label>
-          <button id="go" type="submit" value="submit"></button>
+          <label>1</label><input type="range" id="fdNumber" value="100" min="1" max="1000"><label>1000</label>
+          <button id="fdButton" type="submit" value="submit"></button>
       </div>
-      <div id="kmeans" class="kmeans-chart"></div>
+      <div id="fdGraph" class="kmeans-chart"></div>
       <div class="output">
-        <textarea readonly id="output"></textarea>
+        <textarea readonly id="fdOutput"></textarea>
       </div>
     </div>
+
+    <!-- KMeans Force Directed Graph -->
     <div class="bodyContainer">
       <h1>Movie's | KMeans</h1>
       <div class="inputForm">
-          <label>1</label>
-          <input type="range" id="number" value="100" min="1" max="1000">
-          <label>1000</label>
-          <button id="go" type="submit" value="submit"></button>
+          <label>1</label><input type="range" id="kmeansNumber" value="100" min="1" max="1000"><label>1000</label>
+          <button id="kmeansButton" type="submit" value="submit"></button>
       </div>
-      <div id="kmeans" class="kmeans-chart"></div>
+      <div id="fdkmeans" class="kmeans-chart"></div>
       <div class="output">
-        <textarea readonly id="output"></textarea>
+        <textarea readonly id="kmeansOutput"></textarea>
       </div>
     </div>
     
@@ -62,9 +61,9 @@
     
   </body>
   
-  <script type="text/javascript">kMeans("#kmeans", 475, 475, "number", 0, 0);</script>
-                            <!-- kMeans(elt, w, h, numPoints, numClusters, maxIter) { -->
-                              <!-- numPoints => 1000 Movies -->
-                              <!-- numClusters => 21 Genres -->
+  <script type="text/javascript">kMeans("#movieGraph", 475, 475, "graphNumber", 0, 0, "graphMoviesButton", "graphMoviesOutput");</script>
+  <script type="text/javascript">kMeans("#fdGraph", 475, 475, "fdNumber", 0, 0, "fdButton", "fdOutput");</script>
+  <script type="text/javascript">kMeans("#fdkmeans", 475, 475, "kmeansNumber", 21, 10, "kmeansButton", "kmeansOutput");</script>
+
  
 </html> 
