Create JSON Movie Data File

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
   </body>
   
   <script type="text/javascript">kMeans("#movieGraph", 475, 475, "graphNumber", 0, 0, "graphMoviesButton", "graphMoviesOutput");</script>
-  <script type="text/javascript">kMeans("#fdGraph", 475, 475, "fdNumber", 0, 0, "fdButton", "fdOutput");</script>
-  <script type="text/javascript">kMeans("#fdkmeans", 475, 475, "kmeansNumber", 21, 10, "kmeansButton", "kmeansOutput");</script>
+  <!-- <script type="text/javascript">kMeans("#fdGraph", 475, 475, "fdNumber", 0, 0, "fdButton", "fdOutput");</script>
+  <script type="text/javascript">kMeans("#fdkmeans", 475, 475, "kmeansNumber", 21, 10, "kmeansButton", "kmeansOutput");</script> -->
 
  
 </html> 
