HomePage: divided into three sections

--- a/fdGraph/index.html
+++ b/fdGraph/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <style>
     .links line {
-      stroke: white;
+      stroke: black;
       stroke-opacity: .5;
     }
     .nodes circle {
@@ -12,8 +12,6 @@
       stroke-width: 1.5px;
     }
   </style>
-
-  <link rel="stylesheet" href="../main.css">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
