--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DataViz Project</title>
 
     <link rel="stylesheet" href="./main.css">
 
@@ -14,10 +14,19 @@
 </head>
 <body>
     <h1>DataViz Project</h1>
-    <ul>
-        <li><a href="./movieGraph/index.html">Move Graph</a></li>
-        <li><a href="./fdGraph/index.html">Force Directed Graph</a></li>
-        <li>Kmeans Graph</li>
-    </ul>
+    <div class="flexContainer">
+        <div class="flexItem">
+            <h3>Movie Graph</h3>
+            <a class="mgIMG" href="./movieGraph/index.html"></a>
+        </div>
+        <div class="flexItem">
+            <h3>Force Directed Graph</h3>
+            <a  class="fdIMG" href="./fdGraph/index.html"></a>
+        </div>
+        <div class="flexItem">
+            <h3>KMeans Graph</h3>
+            <a  class="kmIMG" href="./index.html"></a>
+        </div>
+    </div>
 </body>
 </html>
