--- a/fdGraph/index.html
+++ b/fdGraph/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <style>
     .links line {
-      stroke: black;
+      stroke: whitesmoke;
       stroke-opacity: .5;
     }
     .nodes circle {
@@ -17,10 +17,16 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="./fdGraph.css">
   
 </head>
 <body>
-  <svg  id="fdsvg" width="1000" height="1000"></svg>
+  <div class="left">
+    <h1>Force Directed Graph</h1>
+    <textarea readonly></textarea>
+  </div>
+  <svg  id="fdsvg" width="1000" height="750"></svg>
 </body>
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
