--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="flexItem">
             <h3>KMeans Graph</h3>
-            <a  class="kmIMG" href="./index.html"></a>
+            <a  class="kmIMG" href= "./kmeansGraph/index.html" ></a>
         </div>
     </div>
 </body>
